Add example defaults locking to CM/CDH version and support Cloudera distributed JDK 1.7

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -88,6 +88,7 @@ whirr.cm.default.config.navigator.mgmt_log_dir=/manager/navigator/log
 
 whirr.cm.config.cm.parcel_repo_path=/data0/manager/parcels/parcel-repository
 whirr.cm.config.cm.parcel_distribute_rate_limit_kbs_per_second=500000
+whirr.cm.config.cm.enable_api_debug=true
 
 whirr.cm.config.hdfs.dfs_block_local_path_access_user=impala
 whirr.cm.config.datanode.dfs_datanode_data_dir_perm=755
@@ -103,6 +104,8 @@ whirr.cm.config.jobtracker.job_tracker_bind_wildcard=true
 
 whirr.cm.config.5.hbase.hbase_enable_replication=true
 whirr.cm.config.5.hbase.hbase_enable_indexing=true
+
+whirr.cm.config.6.impalad.enable_audit_event_log=true
 
 whirr.cm.config.oozie_server.oozie_web_console=true
 
