--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -18,9 +18,6 @@
 # The name of the cluster, must be alpha-numeric
 whirr.cluster-name=whirr
 
-# The user to provision and run under on each cluster node
-whirr.cluster-user=whirr
-
 # The cluster topology, defining 1 CM server node, 3 CDH master nodes and 3 CDH slave nodes
 whirr.instance-templates=\
 1 cm-server+cm-agent,\
@@ -28,6 +25,9 @@ whirr.instance-templates=\
 1 cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-sqoop-server+cm-cdh-zookeeper+cm-cdh-httpfs+cm-agent,\
 1 cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-impala-catalog-server+cm-cdh-hiveserver2+cm-cdh-hcatalog+cm-cdh-zookeeper+cm-cdh-httpfs+cm-agent,\
 3 cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-solr-server+cm-cdh-solr-hbase-indexer+cm-cdh-flume-agent+cm-cdh-httpfs+cm-agent
+
+# The user to provision and run under on each cluster node
+whirr.cluster-user=whirr
 
 # List of client IP ranges that can access the CM and CDH web console and client servers
 # Note that CM is deployed with the default admin accounts and credentials and CDH is provisioned
@@ -66,14 +66,14 @@ whirr.location-id=us-west-2c
 
 # Define the CM repository version in 'cm$MAJOR_VERSION.$MINOR_VERSION.$INCREMENTAL_VERSION'
 # format (major version mandatory, minor and incremental optional), defaults to latest available
-#whirr.env.repocm=cm5.0.0
+whirr.env.repocm=cm5.0.0
 
 # Define the CM API version in 'v$MAJOR_VERSION' format, defaults to most advanced available from CM version
 #whirr.cm.api=v6
 
 # Define the the CDH major version to install, in 'cdh$MAJOR_VERSION' format. Minor and incremental
 # versions defined by the latest available from the 'whirr.cm.config.cm.remote_parcel_repo_urls' list
-#whirr.cm.cdh=cdh5
+whirr.cm.cdh=cdh5
 
 # Provide an optional JDK install URL, supporting JDK 1.6 and 1.7 '.bin', '.tar' and '.tar.gz' installs
 # as downloaded from Oracle and hosted on a web server. If not set, the JDK will default to the latest
