Support coexisting CDH4 and CDH5 deployments with same config, useful for integration test suites

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -89,7 +89,12 @@ whirr.env.jdk_installed=true
 whirr.cm.config.cm.cm_database_name=cm
 whirr.cm.config.cm.cm_database_type=mysql
 whirr.cm.config.cm.custom_banner_html=My Cloudera Managed\, Whirr provisioned\, CDH Cluster
-whirr.cm.config.cm.remote_parcel_repo_urls=http://archive.cloudera.com/cdh5/parcels/latest/
+whirr.cm.config.cm.remote_parcel_repo_urls=\
+http://archive.cloudera.com/cdh5/parcels/latest/\\,\
+http://archive.cloudera.com/cdh4/parcels/latest/\\,\
+http://archive.cloudera.com/impala/parcels/latest/\\,\
+http://archive.cloudera.com/search/parcels/latest/
+
 
 # Provide CM Services settings with prefix 'whirr.cm.config.' followed by service name
 # (see http://cloudera.github.io/cm_api/apidocs/v3/path__clusters_-clusterName-_services.html)
