--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -51,6 +51,8 @@ whirr.cm.default.config.regionserver.hbase_regionserver_log_dir=/hbase/regionser
 whirr.cm.default.config.solr_server.solr_log_dir=/solr/server/log
 whirr.cm.default.config.solr_server.solr_data_dir=/solr/server/data0
 
+whirr.cm.default.config.6.hbase_indexer.hbase_indexer_log_dir=/solr/hbaseindexer/log
+
 whirr.cm.default.config.hivemetastore.hive_log_dir=/hive/metastore/log
 whirr.cm.default.config.hiveserver2.hive_log_dir=/hive/server2/log
 whirr.cm.default.config.webhcat.hcatalog_log_dir=/hive/hcatalog/log
@@ -64,6 +66,7 @@ whirr.cm.default.config.beeswax_server.beeswax_log_dir=/hue/beeswax/log
 whirr.cm.default.config.impalad.log_dir=/impala/daemon/log
 whirr.cm.default.config.5.impalad.audit_event_log_dir=/impala/daemon/audit
 whirr.cm.default.config.statestore.log_dir=/impala/statestore/log
+whirr.cm.default.config.6.catalogserver.log_dir=/impala/catalogserver/log
 
 whirr.cm.default.config.oozie_server.oozie_data_dir=/oozie/data0
 whirr.cm.default.config.oozie_server.oozie_log_dir=/oozie/log
