--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -18,10 +18,10 @@
 # The name of the cluster, must be alpha-numeric
 whirr.cluster-name=whirr
 
-# The cluster topology, defining 1 CM server node, 3 CDH master nodes and 3 CDH slave nodes
+# A Cloudera Enterprise Data Hub cluster topology, defining 1 CM server node, 3 CDH master nodes and 3 CDH slave nodes
 whirr.instance-templates=\
 1 cm-server+cm-agent,\
-1 cm-cdh-namenode+cm-cdh-hue-server+cm-cdh-httpfs+cm-cdh-zookeeper+cm-agent,\
+1 cm-cdh-namenode+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver+cm-cdh-httpfs+cm-cdh-zookeeper+cm-agent,\
 1 cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-sqoop-server+cm-cdh-zookeeper+cm-cdh-httpfs+cm-agent,\
 1 cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-impala-catalog-server+cm-cdh-hiveserver2+cm-cdh-hcatalog+cm-cdh-zookeeper+cm-cdh-httpfs+cm-agent,\
 3 cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-solr-server+cm-cdh-solr-hbase-indexer+cm-cdh-flume-agent+cm-cdh-httpfs+cm-agent
