Implement YARN roles

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -37,6 +37,8 @@ whirr.cm.default.config.failovercontroller.failover_controller_log_dir=/hdfs/fai
 whirr.cm.default.config.datanode.dfs_data_dir_list=/hdfs/datanode/data0
 whirr.cm.default.config.datanode.datanode_log_dir=/hdfs/datanode/log
 
+whirr.cm.default.config.nodemanager.yarn_nodemanager_local_dirs=/yarn/nodemanager/local
+
 whirr.cm.default.config.jobtracker.jobtracker_mapred_local_dir_list=/mapreduce/jobtracker/local
 whirr.cm.default.config.jobtracker.hadoop_job_history_dir=/mapreduce/jobtracker/history
 whirr.cm.default.config.jobtracker.jobtracker_log_dir=/mapreduce/jobtracker/log
@@ -99,6 +101,8 @@ whirr.cm.config.hdfs_gateway.dfs_client_use_trash=true
 whirr.cm.config.namenode.namenode_bind_wildcard=true
 whirr.cm.config.secondarynamenode.secondary_namenode_bind_wildcard=true
 whirr.cm.config.datanode.dfs_datanode_bind_wildcard=true
+
+whirr.cm.config.yarn_gateway.mapred_submit_replication=3
 
 whirr.cm.config.jobtracker.mapred_job_tracker_handler_count=22
 whirr.cm.config.mapreduce_gateway.mapred_submit_replication=3
