Enable YARN roles in example config

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -23,8 +23,8 @@ whirr.instance-templates=\
 1 cm-server+cm-agent,\
 1 cm-cdh-namenode+cm-cdh-hue-server+cm-cdh-hue-beeswaxserver+cm-cdh-httpfs+cm-cdh-zookeeper+cm-agent,\
 1 cm-cdh-secondarynamenode+cm-cdh-oozie-server+cm-cdh-hbase-master+cm-cdh-sqoop-server+cm-cdh-zookeeper+cm-cdh-httpfs+cm-agent,\
-1 cm-cdh-jobtracker+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-impala-catalog-server+cm-cdh-hiveserver2+cm-cdh-hcatalog+cm-cdh-zookeeper+cm-cdh-httpfs+cm-agent,\
-3 cm-cdh-datanode+cm-cdh-tasktracker+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-solr-server+cm-cdh-solr-hbase-indexer+cm-cdh-flume-agent+cm-cdh-httpfs+cm-agent
+1 cm-cdh-resourcemanager+cm-cdh-jobhistory+cm-cdh-hivemetastore+cm-cdh-impala-statestore+cm-cdh-impala-catalog-server+cm-cdh-hiveserver2+cm-cdh-hcatalog+cm-cdh-zookeeper+cm-cdh-httpfs+cm-agent,\
+3 cm-cdh-datanode+cm-cdh-nodemanager+cm-cdh-hbase-regionserver+cm-cdh-impala-daemon+cm-cdh-solr-server+cm-cdh-solr-hbase-indexer+cm-cdh-flume-agent+cm-cdh-httpfs+cm-agent
 
 # The user to provision and run under on each cluster node
 whirr.cluster-user=whirr
@@ -52,9 +52,10 @@ whirr.location-id=us-west-2c
 # its initialization and launch, defaults to true
 #whirr.cm.auto=false
 
-# Override node storage device mount points directory list for CM service directories,
-# ',' separated list (these directories must exist and be correctly mounted)
-#whirr.cm.data.dirs.root=/mnt/data0,/mnt/data1,/mnt/data2,/mnt/data3
+# Override automatically determined node storage device mount points directory list for
+# CM service directories, ',' separated list (these directories must exist and be correctly
+# formatted and mounted)
+whirr.cm.data.dirs.root=/data
 
 # Decide whether to issue cloud security profile and iptables directives to open ports (true)
 # or rely on unfettered network access (false), defaults to true
@@ -93,7 +94,8 @@ whirr.cm.config.cm.remote_parcel_repo_urls=\
 http://archive.cloudera.com/cdh5/parcels/latest/\\,\
 http://archive.cloudera.com/cdh4/parcels/latest/\\,\
 http://archive.cloudera.com/impala/parcels/latest/\\,\
-http://archive.cloudera.com/search/parcels/latest/
+http://archive.cloudera.com/search/parcels/latest/\\,\
+http://archive.cloudera.com/spark/parcels/
 
 
 # Provide CM Services settings with prefix 'whirr.cm.config.' followed by service name
