--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -38,6 +38,9 @@ whirr.cm.default.config.datanode.dfs_data_dir_list=/hdfs/datanode/data0
 whirr.cm.default.config.datanode.datanode_log_dir=/hdfs/datanode/log
 
 whirr.cm.default.config.nodemanager.yarn_nodemanager_local_dirs=/yarn/nodemanager/local
+whirr.cm.default.config.resourcemanager.resource_manager_log_dir=/yarn/resourcemanager/log
+whirr.cm.default.config.jobhistory.mr2_jobhistory_log_dir=/yarn/jobhistory/log
+whirr.cm.default.config.nodemanager.node_manager_log_dir=/yarn/nodemanager/log
 
 whirr.cm.default.config.jobtracker.jobtracker_mapred_local_dir_list=/mapreduce/jobtracker/local
 whirr.cm.default.config.jobtracker.hadoop_job_history_dir=/mapreduce/jobtracker/history
