--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -190,6 +190,10 @@ cm-cdh-secondarynamenode.client.ports=50090
 cm-cdh-httpfs.client.ports=14000
 cm-cdh-datanode.client.ports=50010,50020,50075
 
+cm-cdh-resourcemanager.client.ports=8032,8030,8031,8033,8088
+cm-cdh-jobhistory.client.ports=10020,19888
+cm-cdh-nodemanager.client.ports=8040,8042,8041
+
 cm-cdh-jobtracker.client.ports=8021,50030
 cm-cdh-tasktracker.client.ports=50060
 
