--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -180,6 +180,7 @@ database.port.mysql=3306
 database.port.postgres=5432
 
 cm-server.port.web=7180
+cm-server.port.nav=7187
 cm-server.port.comms=7182
 cm-server.ports=
 
