--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 		<skipASs>true</skipASs>
 
 		<whirr.version>0.9.0-cdh5.0.0</whirr.version>
-		<cm.version>5.0.0-beta-2</cm.version>
+		<cm.version>5.0.0</cm.version>
 		<log4j.version>1.2.16</log4j.version>
 		<slf4j.version>1.6.4</slf4j.version>
 		<hamcrest-all.version>1.1</hamcrest-all.version>
