--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -54,7 +54,10 @@ whirr.cm.default.config.hbaserestserver.hbase_restserver_log_dir=/hbase/restserv
 whirr.cm.default.config.regionserver.hbase_regionserver_log_dir=/hbase/regionserver/log
 
 whirr.cm.default.config.solr_server.solr_log_dir=/solr/server/log
-whirr.cm.default.config.solr_server.solr_data_dir=/solr/server/data0
+whirr.cm.default.config.solr_server.solr_data_dir=/solr/server/data
+
+whirr.cm.default.config.spark_master.log_dir=/spark/master/log
+whirr.cm.default.config.spark_worker.work_directory=/spark/worker/work
 
 whirr.cm.default.config.6.hbase_indexer.hbase_indexer_log_dir=/solr/hbaseindexer/log
 
