Refactor data directories

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -19,7 +19,7 @@
 
 whirr.cm.auto=true
 whirr.cm.use.packages=false
-whirr.cm.data.dirs.root.default=/data0
+whirr.cm.data.dirs.root.default=/data
 whirr.cm.firewall.enable=true
 whirr.cm.db.type=mysql
 whirr.cm.license.uri=classpath:///cm-license.txt
@@ -27,14 +27,14 @@ whirr.cm.license.uri=classpath:///cm-license.txt
 whirr.cm.agent.log.file=/manager/agent/log/agent.log
 whirr.cm.agent.parcels.dir=/manager/parcels/parcel-runtime
 
-whirr.cm.default.config.namenode.dfs_name_dir_list=/hdfs/namenode/data0
+whirr.cm.default.config.namenode.dfs_name_dir_list=/hdfs/namenode/data
 whirr.cm.default.config.namenode.namenode_log_dir=/hdfs/namenode/log
 whirr.cm.default.config.secondarynamenode.secondarynamenode_log_dir=/hdfs/secondarynamenode/log
-whirr.cm.default.config.secondarynamenode.fs_checkpoint_dir_list=/hdfs/secondarynamenode/data0
+whirr.cm.default.config.secondarynamenode.fs_checkpoint_dir_list=/hdfs/secondarynamenode/data
 whirr.cm.default.config.journalnode.journalnode_log_dir=/hdfs/journalnode/log
 whirr.cm.default.config.httpfs.httpfs_log_dir=/hdfs/httpfs/log
 whirr.cm.default.config.failovercontroller.failover_controller_log_dir=/hdfs/failovercontroller/log
-whirr.cm.default.config.datanode.dfs_data_dir_list=/hdfs/datanode/data0
+whirr.cm.default.config.datanode.dfs_data_dir_list=/hdfs/datanode/data
 whirr.cm.default.config.datanode.datanode_log_dir=/hdfs/datanode/log
 
 whirr.cm.default.config.nodemanager.yarn_nodemanager_local_dirs=/yarn/nodemanager/local
@@ -65,7 +65,7 @@ whirr.cm.default.config.hivemetastore.hive_log_dir=/hive/metastore/log
 whirr.cm.default.config.hiveserver2.hive_log_dir=/hive/server2/log
 whirr.cm.default.config.webhcat.hcatalog_log_dir=/hive/hcatalog/log
 
-whirr.cm.default.config.sqoop_server.sqoop_metastore_data_dir=/sqoop/server/data0
+whirr.cm.default.config.sqoop_server.sqoop_metastore_data_dir=/sqoop/server/data
 whirr.cm.default.config.sqoop_server.sqoop_log_dir=/sqoop/server/log
 
 whirr.cm.default.config.hue_server.hue_server_log_dir=/hue/server/log
@@ -76,10 +76,10 @@ whirr.cm.default.config.5.impalad.audit_event_log_dir=/impala/daemon/audit
 whirr.cm.default.config.statestore.log_dir=/impala/statestore/log
 whirr.cm.default.config.6.catalogserver.log_dir=/impala/catalogserver/log
 
-whirr.cm.default.config.oozie_server.oozie_data_dir=/oozie/data0
+whirr.cm.default.config.oozie_server.oozie_data_dir=/oozie/data
 whirr.cm.default.config.oozie_server.oozie_log_dir=/oozie/log
 
-whirr.cm.default.config.server.dataDir=/zookeeper/data0
+whirr.cm.default.config.server.dataDir=/zookeeper/data
 whirr.cm.default.config.server.dataLogDir=/zookeeper/transaction
 whirr.cm.default.config.server.zk_server_log_dir=/zookeeper/log
 
@@ -97,7 +97,7 @@ whirr.cm.default.config.navigator.mgmt_log_dir=/manager/navigator/log
 
 # CM Settings
 
-whirr.cm.config.cm.parcel_repo_path=/data0/manager/parcels/parcel-repository
+whirr.cm.config.cm.parcel_repo_path=/data/manager/parcels/parcel-repository
 whirr.cm.config.cm.parcel_distribute_rate_limit_kbs_per_second=500000
 whirr.cm.config.cm.enable_api_debug=true
 
