Add new CM Mgmt Service storage and log mappings to ephemeral storage

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -86,7 +86,9 @@ whirr.cm.default.config.server.zk_server_log_dir=/zookeeper/log
 whirr.cm.default.config.agent.flume_agent_log_dir=/flume/log
 
 whirr.cm.default.config.hostmonitor.mgmt_log_dir=/manager/hostmonitor/log
+whirr.cm.default.config.hostmonitor.firehose_storage_dir=/manager/hostmonitor/data
 whirr.cm.default.config.servicemonitor.mgmt_log_dir=/manager/servicemonitor/log
+whirr.cm.default.config.servicemonitor.firehose_storage_dir=/manager/servicemonitor/data
 whirr.cm.default.config.activitymonitor.mgmt_log_dir=/manager/activitymonitor/log
 whirr.cm.default.config.reportsmanager.mgmt_log_dir=/manager/reportsmanager/log
 whirr.cm.default.config.reportsmanager.headlamp_scratch_dir=/manager/reportsmanager/report
@@ -94,6 +96,8 @@ whirr.cm.default.config.alertpublisher.mgmt_log_dir=/manager/alertpublisher/log
 whirr.cm.default.config.eventserver.mgmt_log_dir=/manager/eventserver/log
 whirr.cm.default.config.eventserver.eventserver_index_dir=/manager/eventserver/index
 whirr.cm.default.config.navigator.mgmt_log_dir=/manager/navigator/log
+whirr.cm.default.config.navigatormetaserver.mgmt_log_dir=/manager/navigatormeta/log
+whirr.cm.default.config.navigatormetaserver.data_dir=/manager/navigatormeta/data
 
 # CM Settings
 
