Convert CDH version to system property

--- a/cm-ec2.properties
+++ b/cm-ec2.properties
@@ -128,7 +128,7 @@ whirr.env.repocm=cm5.0.0
 # Define the the CDH major version to install, in 'cdh$MAJOR_VERSION' format.
 # Minor and incremental versions defined by the latest available from the
 # 'whirr.cm.config.cm.remote_parcel_repo_urls' list
-whirr.cm.cdh=cdh5
+whirr.env.repocdh=cdh5
 
 # Provide an optional JDK install URL, supporting JDK 1.6 and 1.7 '.bin', '.tar'
 # and '.tar.gz' installs as downloaded from Oracle and hosted on a web server.
