--- a/src/test/resources/test-whirrcm.properties
+++ b/src/test/resources/test-whirrcm.properties
@@ -27,4 +27,4 @@ whirr.cm.auto=true
 
 whirr.env.repocm=${sys:whirr.test.cm.version}
 whirr.cm.api=${sys:whirr.test.cm.api.version}
-whirr.cm.cdh=${sys:whirr.test.cm.cdh.version}
+whirr.env.repocdh=${sys:whirr.test.cm.cdh.version}
