--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -207,20 +207,20 @@ cm-cdh-tasktracker.client.ports=50060
 
 cm-cdh-zookeeper.client.ports=2181
 
-cm-cdh-spark-master.client.ports=7077,18080
-cm-cdh-spark-worker.client.ports=7078,18081
+cm-cdh-sparkmaster.client.ports=7077,18080
+cm-cdh-sparkworker.client.ports=7078,18081
 
-cm-cdh-hbase-master.client.ports=60000,60010
-cm-cdh-hbase-regionserver.client.ports=60020,60030,8080,9090
+cm-cdh-hbasemaster.client.ports=60000,60010
+cm-cdh-hbaseregion.client.ports=60020,60030,8080,9090
 
 cm-cdh-hivemetastore.client.ports=9083
 
-cm-cdh-impala-daemon.client.ports=21000,25000
-cm-cdh-impala-statestore.client.ports=25010
+cm-cdh-impala.client.ports=21000,25000
+cm-cdh-impalastatestore.client.ports=25010
 
-cm-cdh-hue-server.client.ports=8888
-cm-cdh-hue-beeswaxserver.client.ports=
+cm-cdh-hue.client.ports=8888
+cm-cdh-huebeeswax.client.ports=
 
-cm-cdh-oozie-server.client.ports=11000
+cm-cdh-oozie.client.ports=11000
 
-cm-cdh-solr-server.client.ports=8983,8984
+cm-cdh-solr.client.ports=8983,8984
