Disable HTTP referer check to allow CM to be fronted by a proxy

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -104,6 +104,7 @@ whirr.cm.default.config.navigatormetaserver.data_dir=/manager/navigatormeta/data
 whirr.cm.config.cm.parcel_repo_path=/data/manager/parcels/parcel-repository
 whirr.cm.config.cm.parcel_distribute_rate_limit_kbs_per_second=500000
 whirr.cm.config.cm.enable_api_debug=true
+whirr.cm.config.cm.referer_check=false
 
 whirr.cm.config.hdfs.dfs_block_local_path_access_user=impala
 whirr.cm.config.datanode.dfs_datanode_data_dir_perm=755
