Output web consoles to console, including CM, Nav and Hue

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -189,6 +189,7 @@ database.port.postgres=5432
 
 cm-server.port.web=7180
 cm-server.port.nav=7187
+cm-server.port.hue=8888
 cm-server.port.comms=7182
 cm-server.ports=
 
