Add load balancer service, impalad implemented

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -187,6 +187,8 @@ whirr.cm.config.navigator.navigator_database_name=cm_navr
 database.port.mysql=3306
 database.port.postgres=5432
 
+cm-balancer.port.impala=21000
+
 cm-server.port.web=7180
 cm-server.port.nav=7187
 cm-server.port.hue=8888
