--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<groupId>com.cloudera</groupId>
 	<artifactId>whirr-cm</artifactId>
 	<packaging>jar</packaging>
-	<version>2.3</version>
+	<version>2.4-SNAPSHOT</version>
 	<name>whirr-cm</name>
 	<url>https://github.com/cloudera/whirr-cm</url>
 
