Add Spark Worker node log directory configuration directive

--- a/src/main/resources/whirr-cm-default.properties
+++ b/src/main/resources/whirr-cm-default.properties
@@ -58,6 +58,7 @@ whirr.cm.default.config.solr_server.solr_data_dir=/solr/server/data
 
 whirr.cm.default.config.spark_master.log_dir=/spark/master/log
 whirr.cm.default.config.spark_worker.work_directory=/spark/worker/work
+whirr.cm.default.config.spark_worker.log_dir=/spark/worker/log
 
 whirr.cm.default.config.6.hbase_indexer.hbase_indexer_log_dir=/solr/hbaseindexer/log
 
